Re-Structured resume

--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-% LaTeX resume using res.cls
+% LaTeX resume using resume.cls
 \documentclass[margin]{res}
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
@@ -22,13 +22,13 @@
 \section{OBJECTIVE}  Jason Parks is experienced with Red Hat, Debian, and Suse distributions of Linux, and Microsoft Windows. His Linux knowledge includes Spacewalk, Katello, FreeIPA, Puppet and scripting languages Shell, Python, and Perl, and is coupled with extensive Dell PowerEdge Server experience. Jason has evidenced his expertise by achieving the vendor certifications, Red Hat Certified Engineer, Novell Certified Linux Administrator and Novell Datacenter Technical Specialist.
  
 \section{COMPUTER \\ SKILLS} 
-	{\sl Languages \& Software:} Bash, Python, Perl, Puppet DSL. \\
+	{\sl Languages \& Software:} Advanced: Bash, Puppet DSL. Beginner: Perl, Python \\
 	{\sl Operating Systems:} Microsoft Windows, Red Hat Enterprise Linux, Debian Linux, SuSE Linux, Solaris and IBM AIX \\
-	{\sl Open Source Projects:} Puppet, Spacewalk, Katello, Pulp, Redis, Elasticsearch, Logstash \\
+	{\sl Open Source Projects:} Advanced: Puppet, Spacewalk, Katello, Pulp, Beginner: Redis, Elasticsearch, Logstash \\
  
 \section{EXPERIENCE} 
 	{\sl Committee Member} \hfill May 2014 - Present \\
-    The Linux Foundation Item Writing Committee
+    The Linux Foundation Item Writing Committee - LFCE Program
     \begin{itemize}  \itemsep -2pt %reduce space between items
     \item Insuring the alignment of exam content with the the exam content blueprint.
     \item Creating and approving certification exam questions and recommending an exam cut score.
