Didn't upload right stuff with a8d5289c96d2399d186dd72cf165600aa64b90f8

--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
  \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 % address begins here
 % Again, the address lines must be centered over entire width of resume:
- \moveleft.5\hoffset\centerline{7416 NW 23rd, Apt 233}
+ \moveleft.5\hoffset\centerline{7301 Lyrewood Ln, Apt 745}
  \moveleft.5\hoffset\centerline{Bethany, OK 73008}
  \moveleft.5\hoffset\centerline{(405) 826-4513}
 
