--- a/resume.tex
+++ b/resume.tex
@@ -13,13 +13,13 @@
 % address begins here
 % Again, the address lines must be centered over entire width of resume:
  \moveleft.5\hoffset\centerline{7301 Lyrewood Ln, Apt 745}
- \moveleft.5\hoffset\centerline{Bethany, OK 73008}
+ \moveleft.5\hoffset\centerline{Oklahoma City, OK 73132}
  \moveleft.5\hoffset\centerline{(405) 826-4513}
 
 
 \begin{resume}
  
-\section{OBJECTIVE}  Jason Parks is experienced with Red Hat, Debian, and Suse distributions of Linux, and Microsoft Windows. His Linux knowledge includes Spacewalk, Katello, FreeIPA, Puppet and scripting languages Shell, Python, and Perl, and is coupled with extensive Dell PowerEdge Server experience. Jason has evidenced his expertise by achieving the vendor certifications, Red Hat Certified Engineer, Novell Certified Linux Administrator and Novell Datacenter Technical Specialist.
+\section{OBJECTIVE}  Jason Parks is experienced with Red Hat, Debian, and Suse distributions of Linux, and Microsoft Windows. His Linux knowledge includes Spacewalk/Satellite5, Katello/Satellite6, FreeIPA, Puppet and scripting languages Shell, Python, and Perl, and is coupled with extensive Dell PowerEdge Server experience. Jason has evidenced his expertise by achieving the vendor certifications, Red Hat Certified Engineer, Novell Certified Linux Administrator and Novell Datacenter Technical Specialist. 
  
 \section{COMPUTER \\ SKILLS} 
 	{\sl Languages \& Software:} Advanced: Bash, Puppet DSL. Beginner: Perl, Python \\
