--- a/resume.tex
+++ b/resume.tex
@@ -19,7 +19,7 @@
 
 \begin{resume}
  
-\section{OBJECTIVE}  Jason Parks is experienced with Red Hat, Debian, and Suse distributions of Linux, and Microsoft Windows. His Linux knowledge includes Spacewalk/Satellite5, Katello/Satellite6, FreeIPA, Puppet and scripting languages Shell, Python, and Perl, and is coupled with extensive Dell PowerEdge Server experience. Jason has evidenced his expertise by achieving the vendor certifications, Red Hat Certified Engineer, Novell Certified Linux Administrator and Novell Datacenter Technical Specialist. 
+\section{OBJECTIVE}  Jason Parks is experienced with Red Hat, Debian, and Suse distributions of Linux, and Microsoft Windows. His Linux knowledge includes Spacewalk/Red Hat Satellite 5, Katello/Red Hat Satellite 6, FreeIPA, Puppet and scripting languages Shell, Python, and Perl, and is coupled with extensive Dell PowerEdge Server experience. Jason has evidenced his expertise by achieving the vendor certifications, Red Hat Certified Engineer, Novell Certified Linux Administrator and Novell Datacenter Technical Specialist. 
  
 \section{COMPUTER \\ SKILLS} 
 	{\sl Languages \& Software:} Advanced: Bash, Puppet DSL. Beginner: Perl, Python \\
