--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,8 @@
 % LaTeX resume using resume.cls
 \documentclass[margin]{res}
-%\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
-%\usepackage{newcent}   % uses new century schoolbook postscript font 
+\usepackage{fontspec}
+\defaultfontfeatures{Mapping=tex-text}
+\setromanfont[Mapping=tex-text]{Adobe Garamond Pro}  \usepackage[activate={true,nocompatibility},final,tracking=true,factor=1100,stretch=10,shrink=10]{microtype}
 \setlength{\textwidth}{5.1in} % set width of text portion
 
 \begin{document}
