--- a/resume.tex
+++ b/resume.tex
@@ -11,6 +11,8 @@
  \moveleft.5\hoffset\centerline{\large\bf Jason E. Parks}
 % Draw a horizontal line the whole width of resume:
  \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
+ \moveleft.5\hoffset\centerline{email: jparks@jpconsulted.com}
+ \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 % address begins here
 % Again, the address lines must be centered over entire width of resume:
  \moveleft.5\hoffset\centerline{7301 Lyrewood Ln, Apt 745}
@@ -19,15 +21,15 @@
 
 
 \begin{resume}
- 
-\section{OBJECTIVE}  Jason Parks is experienced with Red Hat, Debian, and Suse distributions of Linux, and Microsoft Windows. His Linux knowledge includes Spacewalk/Red Hat Satellite 5, Katello/Red Hat Satellite 6, FreeIPA, Puppet and scripting languages Shell, Python, and Perl, and is coupled with extensive Dell PowerEdge Server experience. Jason has evidenced his expertise by achieving the vendor certifications, Red Hat Certified Engineer, Novell Certified Linux Administrator and Novell Datacenter Technical Specialist. 
- 
-\section{COMPUTER \\ SKILLS} 
+
+\section{OBJECTIVE}  Jason Parks is experienced with Red Hat, Debian, and Suse distributions of Linux, and Microsoft Windows. His Linux knowledge includes Spacewalk/Red Hat Satellite 5, Katello/Red Hat Satellite 6, FreeIPA, Puppet and scripting languages Shell, Python, and Perl, and is coupled with extensive Dell PowerEdge Server experience. Jason has evidenced his expertise by achieving the vendor certifications, Red Hat Certified Engineer, Novell Certified Linux Administrator and Novell Datacenter Technical Specialist.
+
+\section{COMPUTER \\ SKILLS}
 	{\sl Languages \& Software:} Advanced: Bash, Puppet DSL. Beginner: Perl, Python \\
 	{\sl Operating Systems:} Microsoft Windows, Red Hat Enterprise Linux, Debian Linux, SuSE Linux, Solaris and IBM AIX \\
 	{\sl Open Source Projects:} Advanced: Puppet, Spacewalk, Katello, Pulp, Beginner: Redis, Elasticsearch, Logstash \\
- 
-\section{EXPERIENCE} 
+
+\section{EXPERIENCE}
 	{\sl Committee Member} \hfill May 2014 - Present \\
     The Linux Foundation Item Writing Committee - LFCE Program
     \begin{itemize}  \itemsep -2pt %reduce space between items
@@ -44,8 +46,8 @@
 		\item Main tasks include support of Unix servers and operating systems, systems management, provisioning of new systems, hardware repairs and software fixes
 		\item Deployed Red Hat Satellite 6 for systems lifecycle management. Brought patching infrastructure up to date. Utilizes ITIL standards
 		\item Deployed and manages Red Hat Identity Management (FreeIPA) for all unix systems
-		\item Deployed Red Hat Enterprise Virtualization cluster to provide lower cost alternative to vmware virtualization. 
-		\item Manages Red Hat Enterprise Linux subscriptions and licensing. 
+		\item Deployed Red Hat Enterprise Virtualization cluster to provide lower cost alternative to vmware virtualization.
+		\item Manages Red Hat Enterprise Linux subscriptions and licensing.
 	\end{itemize}
  	{\sl Enterprise Product Engineer} \hfill March 2011 - July 2013 \\
  	Dell Corporation
@@ -55,7 +57,7 @@
  		\item Document problems, diagnostics, interactions, and solutions.
  		\item Ensure a total solution to technical needs have been met.
  		\item Vendor escalations to hardware and software vendors when a bug is found.
- 		\item Monitor and track issues to ensure accurate resolutions. 
+ 		\item Monitor and track issues to ensure accurate resolutions.
  		\item Educate customers about system management solutions.
  	\end{itemize}
  	{\sl Field Service Technician II} \hfill June 2009 - Feb 2011 \\
