--- a/resume.tex
+++ b/resume.tex
@@ -27,7 +27,8 @@
 \section{COMPUTER \\ SKILLS}
 	{\sl Languages \& Software:} Advanced: Bash, Puppet DSL. Beginner: Perl, Python \\
 	{\sl Operating Systems:} Microsoft Windows, Red Hat Enterprise Linux, Debian Linux, SuSE Linux, Solaris and IBM AIX \\
-	{\sl Open Source Projects:} Advanced: Puppet, Spacewalk, Katello, Pulp, Beginner: Redis, Elasticsearch, Logstash \\
+	{\sl Open Source Projects:} Advanced: Puppet, Spacewalk, Katello, Pulp, Beginner: Redis, Elasticsearch, Logstash, Openstack \\
+	{\sl Cloud Providers:} Linode, Google Compute, Amazon Web Services \\
 
 \section{EXPERIENCE}
 	{\sl Committee Member} \hfill May 2014 - Present \\
@@ -48,6 +49,8 @@
 		\item Deployed and manages Red Hat Identity Management (FreeIPA) for all unix systems
 		\item Deployed Red Hat Enterprise Virtualization cluster to provide lower cost alternative to vmware virtualization.
 		\item Manages Red Hat Enterprise Linux subscriptions and licensing.
+		\item Deployed Openstack Kilo environment for development testing.
+		\item Maintains code in git repositories.
 	\end{itemize}
  	{\sl Enterprise Product Engineer} \hfill March 2011 - July 2013 \\
  	Dell Corporation
