--- a/resume.tex
+++ b/resume.tex
@@ -41,7 +41,7 @@
     \item Unable to hold either Certification within three years of exam launch as a result of serving as an item writer.
     \end{itemize}
 	{\sl System Administrator} \hfill July 2013 - Present \\
-	Seagate Technology
+%	Seagate Technology
 	\begin{itemize}  \itemsep -2pt %reduce space between items
 		\item Provides highly responsive support to local IT teams
 		\item Main tasks include support of Unix servers and operating systems, systems management, provisioning of new systems, hardware repairs and software fixes
@@ -67,11 +67,20 @@
  	Atlantic City Coin and Slot
  	\begin{itemize}  \itemsep -2pt %reduce space between items
  		\item Provided technical / help desk support to casino customers.
- 		\item Troubleshot, Maintain and Repair electrical components of Slot Machines.
+ 		\item Troubleshot Slot Machines, including network connections, player tracking system connectivity, hardware, software (Linux and Windows XP Embedded)
  		\item Traveled around state of Oklahoma servicing casinos.
  		\item Maintained license with tribal and state gaming commissions.
  	\end{itemize} 	
- 	
+ 	 	{\sl Slot Technician} \hfill Oct 2008 - Jun 2009 \\
+ 	Lucky Star Casino
+ 	\begin{itemize}  \itemsep -2pt %reduce space between items
+ 		\item Responsible for 1,500 machines of various types and manufacturers to include moves, adds, changes, removals and preventative maintenance 
+ 		\item Reconfigured for W2G and EFT. 
+ 		\item Repaired monitors, printers, DBA readers, and doors as needed. Ensured connectivity for wide area bonus machines. Replaced fiberoptic cables for connectivity.  
+ 		\item Lucky Star Casino utilizes the TableTrac tracking system.
+ 		\item Tasked with troubleshooting POS/Machine Malfunction forms and ensuring customer satisfaction for over 6,400 customers monthly
+ 		\item Provided customer complaint resolution and administrative support for security and surveillance and Technical Support departments
+ 	\end{itemize} 	
  	
 \end{resume}
 \end{document}
