--- a/resume.tex
+++ b/resume.tex
@@ -15,9 +15,9 @@
  \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 % address begins here
 % Again, the address lines must be centered over entire width of resume:
- \moveleft.5\hoffset\centerline{7301 Lyrewood Ln, Apt 745}
- \moveleft.5\hoffset\centerline{Oklahoma City, OK 73132}
- \moveleft.5\hoffset\centerline{(405) 826-4513}
+ \moveleft.5\hoffset\centerline{1418 Casady Ln}
+ \moveleft.5\hoffset\centerline{The Village, OK 73120}
+ \moveleft.5\hoffset\centerline{(405) 255-8539}
 
 
 \begin{resume}
@@ -40,8 +40,21 @@
     \item Annually reviewing item and exam performance and revising exam items to meet psychometric requirements.
     \item Unable to hold either Certification within three years of exam launch as a result of serving as an item writer.
     \end{itemize}
-	{\sl System Administrator} \hfill July 2013 - Present \\
-%	Seagate Technology
+	{\sl System Administrator} \hfill July 2017 - Present \\
+	Integris Health Inc
+	\begin{itemize}  \itemsep -2pt %reduce space between items
+		\item Provides highly responsive support to local IT teams
+		\item Microsoft Azure Admin, migrated from classic to ARM resources for the entire software stack
+		\item Main tasks include support of Linux servers, SELinux adoption, systems management, provisioning of new systems and software fixes
+		\item Identify and attack CVEs as they're deployed, focusing on a highly secure environment for healthcare information
+		\item Replaced BOKS with Red Hat Identity Management for Active Directory authentication in Linux
+		\item Manages Red Hat Enterprise Linux subscriptions and licensing.
+		\item Maintains Ansible and Puppet code in git repositories.
+		\item VRealize Automation via service now
+	\end{itemize}
+	\clearpage
+	{\sl System Administrator} \hfill July 2013 - July 2017 \\
+	Seagate Technology
 	\begin{itemize}  \itemsep -2pt %reduce space between items
 		\item Provides highly responsive support to local IT teams
 		\item Main tasks include support of Unix servers and operating systems, systems management, provisioning of new systems, hardware repairs and software fixes
