--- a/resume.tex
+++ b/resume.tex
@@ -2,7 +2,7 @@
 \documentclass[margin]{res}
 \usepackage{fontspec}
 \defaultfontfeatures{Mapping=tex-text}
-\setromanfont[Mapping=tex-text]{Adobe Garamond Pro}  \usepackage[activate={true,nocompatibility},final,tracking=true,factor=1100,stretch=10,shrink=10]{microtype}
+\setromanfont[Mapping=tex-text]{Orkney}  \usepackage[activate={true,nocompatibility},final,tracking=true,factor=1100,stretch=10,shrink=10]{microtype}
 \setlength{\textwidth}{5.1in} % set width of text portion
 
 \begin{document}
@@ -22,7 +22,7 @@
 
 \begin{resume}
 
-\section{OBJECTIVE}  Jason Parks is experienced with Red Hat, Debian, and Suse distributions of Linux, and Microsoft Windows. His Linux knowledge includes Spacewalk/Red Hat Satellite 5, Katello/Red Hat Satellite 6, FreeIPA, Puppet and scripting languages Shell, Python, and Perl, and is coupled with extensive Dell PowerEdge Server experience. Jason has evidenced his expertise by achieving the vendor certifications, Red Hat Certified Engineer, Novell Certified Linux Administrator and Novell Datacenter Technical Specialist.
+\section{OBJECTIVE}  Jason Parks is an experienced Administrator of Red Hat, Debian, SuSE distributions of Linux, as well as Microsoft Windows. His Linux expertise includes:  Spacewalk/Red Hat Satellite 5, Katello/Red Hat Satellite 6, FreeIPA, Puppet, Ansible, and the scripting languages shell, Python, and Perl.  He also has extensive Dell PowerEdge server experience.  Jason has demonstrated his expertise by achieving the following vendor certifications:  Red Hat Certified Engineer, Novel Certified Linux Administrator, and Novell Data Center Technical Specialist.  Jason is currently looking for a Senior-level System Adminstrator or System Architect position. 
 
 \section{COMPUTER \\ SKILLS}
 	{\sl Languages \& Software:} Advanced: Bash, Puppet DSL. Beginner: Perl, Python \\
@@ -31,6 +31,17 @@
 	{\sl Cloud Providers:} Linode, Google Compute, Amazon Web Services \\
 
 \section{EXPERIENCE}
+	{\sl Senior Systems Engineer} \hfill July 2017 - Present \\
+Integris Health Inc
+\begin{itemize}  \itemsep -2pt %reduce space between items
+	\item Provides highly responsive support to IT teams and hospitals around the state, troubleshoots complex L2/L3 issues
+	\item Microsoft Azure Admin, managed migration from classic to ARM resources for the entire software stack, continues to apply best practices in cloud computing
+	\item Main tasks include support of Linux servers, SELinux adoption, systems management, provisioning of new systems and software fixes
+	\item Identify and attack security vulnerabilities working closely with Information Security teams
+	\item Deployed Red Hat Identity Management for Active Directory authentication in Linux and AIX
+	\item Manages Red Hat Enterprise Linux subscriptions and licensing.
+	\item Maintains Ansible and Puppet code in git repositories. Documents all procedures and services
+	\end{itemize}
 	{\sl Committee Member} \hfill May 2014 - Present \\
     The Linux Foundation Item Writing Committee - LFCE Program
     \begin{itemize}  \itemsep -2pt %reduce space between items
@@ -40,30 +51,17 @@
     \item Annually reviewing item and exam performance and revising exam items to meet psychometric requirements.
     \item Unable to hold either Certification within three years of exam launch as a result of serving as an item writer.
     \end{itemize}
-	{\sl System Administrator} \hfill July 2017 - Present \\
-	Integris Health Inc
-	\begin{itemize}  \itemsep -2pt %reduce space between items
-		\item Provides highly responsive support to local IT teams
-		\item Microsoft Azure Admin, migrated from classic to ARM resources for the entire software stack
-		\item Main tasks include support of Linux servers, SELinux adoption, systems management, provisioning of new systems and software fixes
-		\item Identify and attack CVEs as they're deployed, focusing on a highly secure environment for healthcare information
-		\item Replaced BOKS with Red Hat Identity Management for Active Directory authentication in Linux
-		\item Manages Red Hat Enterprise Linux subscriptions and licensing.
-		\item Maintains Ansible and Puppet code in git repositories.
-		\item VRealize Automation via service now
-	\end{itemize}
-	\clearpage
 	{\sl System Administrator} \hfill July 2013 - July 2017 \\
 	Seagate Technology
 	\begin{itemize}  \itemsep -2pt %reduce space between items
-		\item Provides highly responsive support to local IT teams
-		\item Main tasks include support of Unix servers and operating systems, systems management, provisioning of new systems, hardware repairs and software fixes
-		\item Deployed Red Hat Satellite 6 for systems lifecycle management. Brought patching infrastructure up to date. Utilizes ITIL standards
-		\item Deployed and manages Red Hat Identity Management (FreeIPA) for all unix systems
-		\item Deployed Red Hat Enterprise Virtualization cluster to provide lower cost alternative to vmware virtualization.
-		\item Manages Red Hat Enterprise Linux subscriptions and licensing.
-		\item Deployed Openstack Kilo environment for development testing.
-		\item Maintains code in git repositories.
+	\item Provides highly responsive support to local IT teams
+	\item Main tasks include support of Unix servers and operating systems, systems management, provisioning of new systems, hardware repairs and software fixes
+	\item Deployed Red Hat Satellite 6 for systems lifecycle management. Brought patching infrastructure up to date. Utilizes ITIL standards
+	\item Deployed and manages Red Hat Identity Management (FreeIPA) for all unix systems
+	\item Deployed Red Hat Enterprise Virtualization cluster to provide lower cost alternative to vmware virtualization.
+	\item Manages Red Hat Enterprise Linux subscriptions and licensing.
+	\item Deployed Openstack Kilo environment for development testing.
+	\item Maintains code in git repositories.
 	\end{itemize}
  	{\sl Enterprise Product Engineer} \hfill March 2011 - July 2013 \\
  	Dell Corporation
@@ -84,17 +82,6 @@
  		\item Traveled around state of Oklahoma servicing casinos.
  		\item Maintained license with tribal and state gaming commissions.
  	\end{itemize} 	
- 	 	{\sl Slot Technician} \hfill Oct 2008 - Jun 2009 \\
- 	Lucky Star Casino
- 	\begin{itemize}  \itemsep -2pt %reduce space between items
- 		\item Responsible for 1,500 machines of various types and manufacturers to include moves, adds, changes, removals and preventative maintenance 
- 		\item Reconfigured for W2G and EFT. 
- 		\item Repaired monitors, printers, DBA readers, and doors as needed. Ensured connectivity for wide area bonus machines. Replaced fiberoptic cables for connectivity.  
- 		\item Lucky Star Casino utilizes the TableTrac tracking system.
- 		\item Tasked with troubleshooting POS/Machine Malfunction forms and ensuring customer satisfaction for over 6,400 customers monthly
- 		\item Provided customer complaint resolution and administrative support for security and surveillance and Technical Support departments
- 	\end{itemize} 	
- 	
 \end{resume}
 \end{document}
 
