--- a/resume.tex
+++ b/resume.tex
@@ -25,21 +25,29 @@
 \section{OBJECTIVE}  Jason Parks is an experienced Administrator of Red Hat, Debian, SuSE distributions of Linux, as well as Microsoft Windows. His Linux expertise includes:  Spacewalk/Red Hat Satellite 5, Katello/Red Hat Satellite 6, FreeIPA, Puppet, Ansible, and the scripting languages shell, Python, and Perl.  He also has extensive Dell PowerEdge server experience.  Jason has demonstrated his expertise by achieving the following vendor certifications:  Red Hat Certified Engineer, Novel Certified Linux Administrator, and Novell Data Center Technical Specialist.  Jason is currently looking for a Senior-level System Adminstrator or System Architect position. 
 
 \section{COMPUTER \\ SKILLS}
-	{\sl Languages \& Software:} Advanced: Bash, Puppet DSL. Beginner: Perl, Python \\
+	{\sl Languages \& Software:} Openshift Container Platform, Jenkins, Workato  \\
 	{\sl Operating Systems:} Microsoft Windows, Red Hat Enterprise Linux, Debian Linux, SuSE Linux, Solaris and IBM AIX \\
 	{\sl Open Source Projects:} Advanced: Puppet, Spacewalk, Katello, Pulp, Beginner: Redis, Elasticsearch, Logstash, Openstack \\
 	{\sl Cloud Providers:} Linode, Google Compute, Amazon Web Services \\
 
 \section{EXPERIENCE}
-	{\sl Senior Systems Engineer} \hfill July 2017 - Present \\
-Integris Health Inc
-\begin{itemize}  \itemsep -2pt %reduce space between items
+	{\sl DevOps Engineer} \hfill January 2020 - Present \\
+	CompSource Mutual Insurance Company
+	\begin{itemize} \itemsep -2pt 
+	\item Manages and maintains Openshift Container Platform
+	\item Responsible for creating and updating devops pipelines in Jenkins for CI/CD of applications
+	\item Implements and improves monitoring and alerting by identifying measures or indicators of system performance and the actions needed to improve or correct performance, relative to the goals of the system.
+	\item Performs test environment configuration, deployment and test activities required to provide a stable test platform.
+	\item Tracks releases, upgrades and changes to the development and test environments.
+	\item Logs, coordinates and resolves environment defects.
+	\end{itemize}
+	{\sl Senior Systems Engineer} \hfill July 2017 - January 2020 \\
+	Integris Health Inc
+	\begin{itemize}  \itemsep -2pt %reduce space between items
 	\item Provides highly responsive support to IT teams and hospitals around the state, troubleshoots complex L2/L3 issues
 	\item Microsoft Azure Admin, managed migration from classic to ARM resources for the entire software stack, continues to apply best practices in cloud computing
 	\item Main tasks include support of Linux servers, SELinux adoption, systems management, provisioning of new systems and software fixes
-	\item Identify and attack security vulnerabilities working closely with Information Security teams
 	\item Deployed Red Hat Identity Management for Active Directory authentication in Linux and AIX
-	\item Manages Red Hat Enterprise Linux subscriptions and licensing.
 	\item Maintains Ansible and Puppet code in git repositories. Documents all procedures and services
 	\end{itemize}
 	{\sl Committee Member} \hfill May 2014 - Present \\
