--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,5 @@
 % LaTeX resume using resume.cls
+% !TeX program = lualatex
 \documentclass[margin]{res}
 \usepackage{fontspec}
 \defaultfontfeatures{Mapping=tex-text}
@@ -15,9 +16,9 @@
  \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 % address begins here
 % Again, the address lines must be centered over entire width of resume:
- \moveleft.5\hoffset\centerline{1418 Casady Ln}
- \moveleft.5\hoffset\centerline{The Village, OK 73120}
- \moveleft.5\hoffset\centerline{(405) 255-8539}
+ \moveleft.5\hoffset\centerline{215 NE 28th St Apt 3205 }
+ \moveleft.5\hoffset\centerline{Oklahoma City, OK 73105}
+ \moveleft.5\hoffset\centerline{(405) 604-7451}
 
 
 \begin{resume}
@@ -31,65 +32,55 @@
 	{\sl Cloud Providers:} Linode, Google Compute, Amazon Web Services \\
 
 \section{EXPERIENCE}
-	{\sl DevOps Engineer} \hfill January 2020 - Present \\
+	{\sl Site Reliability Engineer} \hfill July 2022 - present \\
+	Halo Diagnostics (Robert Half Technology)
+	\begin{itemize} \itemsep -2pt 
+		\item Develop solutions to various challenges to components of platform, related to deployment, monitoring and production operations
+		\item Worked with Infrastructure team to ensure systems are optimal
+		\item Implements and improves monitoring and alerting systems and SIEM to ensure environment is healthy and secure
+		\item Logs, coordinates and resolves environment defects.
+	\end{itemize}
+	{\sl DevOps Engineer} \hfill January 2020 - July 2022 \\
 	CompSource Mutual Insurance Company
 	\begin{itemize} \itemsep -2pt 
-	\item Manages and maintains Openshift Container Platform
-	\item Responsible for creating and updating devops pipelines in Jenkins for CI/CD of applications
-	\item Implements and improves monitoring and alerting by identifying measures or indicators of system performance and the actions needed to improve or correct performance, relative to the goals of the system.
-	\item Performs test environment configuration, deployment and test activities required to provide a stable test platform.
-	\item Tracks releases, upgrades and changes to the development and test environments.
-	\item Logs, coordinates and resolves environment defects.
+		\item Manages and maintains Openshift Container Platform
+		\item Responsible for creating and updating devops pipelines in Jenkins for CI/CD of applications
+		\item Implements and improves monitoring and alerting by identifying measures or indicators of system performance and the actions needed to improve or correct performance, relative to the goals of the system.
+		\item Performs test environment configuration, deployment and test activities required to provide a stable test platform.
+		\item Tracks releases, upgrades and changes to the development and test environments.
+		\item Logs, coordinates and resolves environment defects.
 	\end{itemize}
+	\clearpage
 	{\sl Senior Systems Engineer} \hfill July 2017 - January 2020 \\
 	Integris Health Inc
 	\begin{itemize}  \itemsep -2pt %reduce space between items
-	\item Provides highly responsive support to IT teams and hospitals around the state, troubleshoots complex L2/L3 issues
-	\item Microsoft Azure Admin, managed migration from classic to ARM resources for the entire software stack, continues to apply best practices in cloud computing
-	\item Main tasks include support of Linux servers, SELinux adoption, systems management, provisioning of new systems and software fixes
-	\item Deployed Red Hat Identity Management for Active Directory authentication in Linux and AIX
-	\item Maintains Ansible and Puppet code in git repositories. Documents all procedures and services
+		\item Provides highly responsive support to IT teams and hospitals around the state, troubleshoots complex L2/L3 issues
+		\item Microsoft Azure Admin, managed migration from classic to ARM resources for the entire software stack, continues to apply best practices in cloud computing
+		\item Main tasks include support of Linux servers, SELinux adoption, systems management, provisioning of new systems and software fixes
+		\item Deployed Red Hat Identity Management for Active Directory authentication in Linux and AIX
+		\item Maintains Ansible and Puppet code in git repositories. Documents all procedures and services
 	\end{itemize}
 	{\sl Committee Member} \hfill May 2014 - Present \\
     The Linux Foundation Item Writing Committee - LFCE Program
     \begin{itemize}  \itemsep -2pt %reduce space between items
-    \item Insuring the alignment of exam content with the the exam content blueprint.
-    \item Creating and approving certification exam questions and recommending an exam cut score.
-    \item Approving the equivalence of exam forms.
-    \item Annually reviewing item and exam performance and revising exam items to meet psychometric requirements.
-    \item Unable to hold either Certification within three years of exam launch as a result of serving as an item writer.
+	    \item Insuring the alignment of exam content with the the exam content blueprint.
+	    \item Creating and approving certification exam questions and recommending an exam cut score.
+	    \item Approving the equivalence of exam forms.
+	    \item Annually reviewing item and exam performance and revising exam items to meet psychometric requirements.
+	    \item Unable to hold either Certification within three years of exam launch as a result of serving as an item writer.
     \end{itemize}
 	{\sl System Administrator} \hfill July 2013 - July 2017 \\
 	Seagate Technology
 	\begin{itemize}  \itemsep -2pt %reduce space between items
-	\item Provides highly responsive support to local IT teams
-	\item Main tasks include support of Unix servers and operating systems, systems management, provisioning of new systems, hardware repairs and software fixes
-	\item Deployed Red Hat Satellite 6 for systems lifecycle management. Brought patching infrastructure up to date. Utilizes ITIL standards
-	\item Deployed and manages Red Hat Identity Management (FreeIPA) for all unix systems
-	\item Deployed Red Hat Enterprise Virtualization cluster to provide lower cost alternative to vmware virtualization.
-	\item Manages Red Hat Enterprise Linux subscriptions and licensing.
-	\item Deployed Openstack Kilo environment for development testing.
-	\item Maintains code in git repositories.
+		\item Provides highly responsive support to local IT teams
+		\item Main tasks include support of Unix servers and operating systems, systems management, provisioning of new systems, hardware repairs and software fixes
+		\item Deployed Red Hat Satellite 6 for systems lifecycle management. Brought patching infrastructure up to date. Utilizes ITIL standards
+		\item Deployed and manages Red Hat Identity Management (FreeIPA) for all unix systems
+		\item Deployed Red Hat Enterprise Virtualization cluster to provide lower cost alternative to vmware virtualization.
+		\item Manages Red Hat Enterprise Linux subscriptions and licensing.
+		\item Deployed Openstack Kilo environment for development testing.
+		\item Maintains code in git repositories.
 	\end{itemize}
- 	{\sl Enterprise Product Engineer} \hfill March 2011 - July 2013 \\
- 	Dell Corporation
- 	\begin{itemize}  \itemsep -2pt %reduce space between items
- 		\item Work complex customer technical issues with Linux and Virtualization OS.
- 		\item Provide remote diagnostic support of Dell Enterprise Environments.
- 		\item Document problems, diagnostics, interactions, and solutions.
- 		\item Ensure a total solution to technical needs have been met.
- 		\item Vendor escalations to hardware and software vendors when a bug is found.
- 		\item Monitor and track issues to ensure accurate resolutions.
- 		\item Educate customers about system management solutions.
- 	\end{itemize}
- 	{\sl Field Service Technician II} \hfill June 2009 - Feb 2011 \\
- 	Atlantic City Coin and Slot
- 	\begin{itemize}  \itemsep -2pt %reduce space between items
- 		\item Provided technical / help desk support to casino customers.
- 		\item Troubleshot Slot Machines, including network connections, player tracking system connectivity, hardware, software (Linux and Windows XP Embedded)
- 		\item Traveled around state of Oklahoma servicing casinos.
- 		\item Maintained license with tribal and state gaming commissions.
- 	\end{itemize} 	
 \end{resume}
 \end{document}
 
